--- a/pom.xml
+++ b/pom.xml
@@ -158,13 +158,13 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>net.talaatharb.project.ProjectApplication</mainClass>
+							<mainClass>net.talaatharb.websitebuilder.WebsiteBuilderApplication</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
-					<appendAssemblyId>false</appendAssemblyId>
+					<appendAssemblyId>true</appendAssemblyId>
 				</configuration>
 
 				<executions>
